--- a/indexcss.css
+++ b/indexcss.css
@@ -1,6 +1,6 @@
 h1{
     text-align:center;
-    color:green;
+    color:violet;
     font-size: 55px;
 }
 
@@ -17,23 +17,24 @@ img{
 }
 
 .grid-container{
-    gap: 50px;
+    gap: 75px;
     grid-template-columns: 1fr 1fr 1fr ;
-    padding-left:150px ;
-    padding-right: 150px;
     display: grid;
+    
 }
 
 
 
 .flex-container {
-    background-color:white;
+    background-color:burlywood;
     display:flex;
     border-radius: 50px;
     justify-content: center;
-
+    padding: 50px;
+    margin:30px;
   }
-  
+
+
 
 
 
